--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ pydantic==2.8.2
 pydantic-settings==2.3.4
 python-multipart==0.0.9
 email-validator
-psycopg[binary]
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.19
