--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ sqlalchemy==2.0.34
 pydantic==2.8.2
 pydantic-settings==2.3.4
 python-multipart==0.0.9
-email-validator
-psycopg[binary]==3.1.19
+email-validator==2.2.0
+psycopg[binary]>=3.2.2,<3.3
